--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -46,6 +46,10 @@ table {
 	border-spacing: 0;
 }
 
+strong {
+	font-weight:bold;
+}
+
 /* LAYOUT STYLES */
 body {
   font-size: 15px;
@@ -73,7 +77,7 @@ header {
 
 header h1 {
   letter-spacing: -1px;
-  font-size: 72px;
+  font-size: 36px;
   color: #fff;
   line-height: 1;
   margin-bottom: 0.2em;
@@ -109,20 +113,29 @@ header h2 {
   max-width: 100%;
 }
 
-aside#sidebar {
+.defaultoff {
+  display:none;
+}
+
+aside {
   width: 200px;
-  padding-left: 20px;
+  padding-left: 30px;
   min-height: 504px;
   float: right;
   background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
   font-size: 12px;
-  line-height: 1.3;
+  line-height: 1.0;
 }
 
-aside#sidebar p.repo-owner,
-aside#sidebar p.repo-owner a {
-  font-weight: bold;
+aside ul {
 }
+
+aside h3 {
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
+  font-size:20px;
+  font-weight:bold;
+}
+
 
 #downloads {
   margin-bottom: 40px;
@@ -221,6 +234,11 @@ form {
   
 }
 
+.section {
+  padding-top:20px;
+  padding-bottom:20px;
+}
+
 
 /* GENERAL ELEMENT TYPE STYLES */
 
@@ -261,12 +279,6 @@ form {
   color: #474747;
 } 
  
-#main-content h3:before {
-  content: "///";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -2em;
-}
 
 #main-content h4 {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
