--- a/lessons/css/theme/lessons.css
+++ b/lessons/css/theme/lessons.css
@@ -79,19 +79,7 @@ body {
  *********************************************/
 .reveal section img {
   margin: 15px 0px;
-  background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #333333;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-  -webkit-transition: all .2s linear;
-  -moz-transition: all .2s linear;
-  -ms-transition: all .2s linear;
-  -o-transition: all .2s linear;
-  transition: all .2s linear; }
-
-.reveal a:hover img {
-  background: rgba(255, 255, 255, 0.2);
-  border-color: #3b759e;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+  } 
 
 /*********************************************
  * NAVIGATION CONTROLS
@@ -150,6 +138,7 @@ body {
 
 .reveal .float-left {
     float:left;
+    text-align:left;
 }
 
 .reveal .filler {
@@ -159,4 +148,8 @@ body {
 
 .reveal table td {
     padding-right:2em;
+}
+
+.reveal .logos td {
+    width:275px;
 }
