Added comm tools presenter-led, not yet finished

--- a/lessons/css/theme/lessons.css
+++ b/lessons/css/theme/lessons.css
@@ -153,3 +153,9 @@ body {
 .reveal .logos td {
     width:275px;
 }
+
+.reveal iframe {
+    width:900px;
+    height:700px;
+    background-color:white;
+}
